--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>HELLO GITHUB</h1>
     <h2>This is an update</h2>
-    <h3>hola hello</h3>
+    <p>Tratando de obtener un conflicto</p>
 
 </body>
 </html>
