adding input name

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>HELLO GITHUB</h1>
     <h2>This is an update</h2>
     <p>Tratando de obtener un conflicto</p>
-
+    <input type="text" name="name">
 </body>
 </html>
